fixed email form spacing and spacing between course description.

--- a/EliteK9/Css/Schedule.css
+++ b/EliteK9/Css/Schedule.css
@@ -27,3 +27,11 @@
 .rowSpace{
     margin-bottom:30px;
 }
+
+.form-horizontal .control-label {
+    text-align: left;
+}
+
+.messageBox {
+    min-height: 120px;
+}
